--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
         <spring-cloud-alibaba.version>2021.1</spring-cloud-alibaba.version>
         <!-- maven.build.timestamp.format表示属性{maven.build.timestamp}的展示格式,默认值为yyyyMMdd-HHmm,可自定义其格式, -->
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
+
+
+        <hutool.version>5.7.1</hutool.version>
+        <poi.version>5.2.2</poi.version>
+        <csv-version>1.9.0</csv-version>
     </properties>
 
     <dependencyManagement>
@@ -47,6 +52,30 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>${hutool.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi</artifactId>
+                <version>${poi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi-ooxml</artifactId>
+                <version>${poi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-csv</artifactId>
+                <version>${csv-version}</version>
+            </dependency>
+
         </dependencies>
 
     </dependencyManagement>
